--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
 
       <footer class="footer">
-        <small>如果想要更改文字或样式，直接编辑页面里的内容即可。</small>
+        <small>真的很想很想和你在一起！</small>
       </footer>
     </div>
   </div>
@@ -45,3 +45,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
