--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="paper">
           <h2>给王艳娟</h2>
           <p>如果你愿意，请接受这份心意。</p >
-          <p class="signature">— 真诚的我</p >
+          <p class="signature">— 真诚的我，杨铭毅</p >
         </div>
       </div>
 
@@ -45,4 +45,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
